fixed container type and buttons

--- a/note.html
+++ b/note.html
@@ -11,10 +11,10 @@
 </head>
 
 <body>
-    <div class="navbar">
+    <header class="navbar">
         <a href="#"> <strong>About</strong></a>
         <a href="#"><strong>Docs</strong></a>
-    </div>
+    </header>
 
     <div class="container">
         <div class="margin-2em"><a href="#">Hide menu</a>
@@ -34,9 +34,9 @@
 
     </div>
 
-    <div class="footer">
+    <footer class="footer">
         <a>Created By David Wu</a>
-    </div>
+    </footer>
 </body>
 
 </html>
