--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 </head>
 
 <body>
-    <div class="navbar">
+    <header class="navbar">
         <a href="#"> <strong>About</strong></a>
         <a href="#"><strong>Docs</strong></a>
-    </div>
+    </header>
 
     <div class="container">
         <div class="margin-2em"><a href="#">Show menu</a></div>
         <div class="margin-2em"><a href="#">Create a new note</a></div>
     </div>
 
-    <div class="footer">
+    <footer class="footer">
         <a>Created By David Wu</a>
-    </div>
+    </footer>
 </body>
 
 </html>
