fixed buttons position on note editing page

--- a/note.html
+++ b/note.html
@@ -28,8 +28,8 @@
         </div>
         <div class="margin-2em">
             <textarea class="editing-textarea">Enter your note here</textarea>
-            <a href="#">Save</a>
-            <a href="#">Delete</a>
+            <button>Save</button>
+            <button>Delete</button>
         </div>
 
     </div>
