implemented note editing and saving function

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <ul id="note-list"></ul>
         </div>
         <div id="main-area" class="margin-2em">
-            <button>New Note</button>
+            <button onclick="newNote()" id="new-note-button">New Note</button>
         </div>
     </div>
 
