implemented note list with show & hide notes functions

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
     <div class="container">
         <div id="side-menu" class="margin-2em">
-            <button>Show Notes</button>
+            <button id="show-note-button" onclick="showNotes()">Show Notes</button>
+            <!-- <button onclick="displayNote('Note Title')">Note Title</button> -->
             <ul id="note-list"></ul>
         </div>
         <div id="main-area" class="margin-2em">
